fixed warnings, changed font / margin

--- a/General/Preamble.tex
+++ b/General/Preamble.tex
@@ -9,7 +9,8 @@
 \usepackage[utf8]{inputenc} % Allows the use of some special characters
 \usepackage{amsmath, amsthm, amssymb, amsfonts} % Nicer mathematical typesetting
 \usepackage[portuguese]{babel} % Portuguese language settings
-\usepackage{lipsum} % Creates dummy text lorem ipsum to showcase typsetting 
+% \usepackage[latin]{babel}
+% \usepackage{lipsum} % Creates dummy text lorem ipsum to showcase typsetting 
 \usepackage{setspace}
 \usepackage{graphicx} % Allows the use of \begin{figure} and \includegraphics
 \usepackage{float} % Useful for specifying the location of a figure ([H] for ex.)
@@ -21,7 +22,7 @@
 \usepackage{booktabs} % For generally nicer looking tables
 
 \usepackage[nottoc,numbib]{tocbibind} % Automatically adds bibliography to ToC
-\usepackage[margin = 2.5cm]{geometry} % Allows for custom (wider) margins
+\usepackage[margin = 2.54cm]{geometry} % Allows for custom (wider) margins
 \usepackage{microtype} % Slightly loosens margin restrictions for nicer spacing  
 \usepackage{titlesec} % Used to create custom section and subsection titles
 \usepackage{titletoc} % Used to create a custom ToC
