--- a/General/Settings.tex
+++ b/General/Settings.tex
@@ -82,7 +82,11 @@ Formador: Nelson Alexandre Santos
 \captionsetup{labelfont={Tue-red,bf}}
 
  % Changes font to mlmodern
-\usepackage{mlmodern}
+% \usepackage{mlmodern}
+
+% Changes font to arial
+\usepackage{helvet}
+\renewcommand{\familydefault}{\sfdefault}
 
 % Removes indent when starting a new paragraph
 \setlength\parindent{0pt}
