--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, table]{article}
+\documentclass[a4paper, table, 10pt]{article}
 \input{General/Preamble} % Loads in the preamble 
 \input{General/Settings} % Loads in user defined settings
 \begin{document}
@@ -11,8 +11,6 @@
 {\hypersetup{linkcolor=black} % Keeps the ToC black even with non-black linkcolor
 \tableofcontents\thispagestyle{empty}}
 \newpage
-
-
 
 % Creates the introduction, starting page numbering
 \input{Chapters/1. Introducao} \pagenumbering{arabic}
