--- a/General/References.bib
+++ b/General/References.bib
@@ -1,7 +1,6 @@
-% Dummy reference
-@book{texbook,
-  author = {Donald E. Knuth},
-  year = {1986},
-  title = {The {\TeX} Book},
-  publisher = {Addison-Wesley Professional}
+% list of references
+@misc{openSourceSecurity,
+author = "snyk",
+title = "Open Source Security Explained",
+note = "https://snyk.io/series/open-source-security/"
 }
