--- a/General/Settings.tex
+++ b/General/Settings.tex
@@ -1,9 +1,9 @@
 % Give your report a title
-\newcommand\reporttitle{Kernel, Licenciamento e Segurança em Ambientes Open Source e Proprietários}
+\newcommand\reporttitle{Kernel, Licenciamento e Segurança em Ambientes \textit{Open Source} e Proprietários}
 
 % Insert course code, name, quartile number and year (or any other subtitle)
 \newcommand\reportsubtitle{
-Sistemas Operativos Open Source (5116)
+5116 - Sistemas Operativos \textit{Open Source}
 }
 
 % Add your group number (for DBL) or any other text.
@@ -13,6 +13,8 @@ Sistemas Operativos Open Source (5116)
 
 % Insert authors and student numbers here
 \newcommand\reportauthors{
+\vspace{-0.4cm}  
+ \\
 Daniel Quaresma \\
 Lucas Silvestre \\
 João Correia \\
@@ -21,42 +23,45 @@ Vladimiro Bonaparte \\
 
 % Add the name of your tutor (for DBL) or any other text.
 \newcommand\grouptutor{
-Formador: Nelson Alexandre Santos
+\textbf{Formador:}\\
+\vspace{0.05cm}  
+Nelson Santos
 }
 
 % Date and location (default: current date and Eindhoven)
 \newcommand\placeanddate{
-\today
+    \vspace{-0.5cm}
+    \today
 }
 
-% Define Tue-red (color of the TU/e logo). Can be changed to drastically change the look of the template
-\definecolor{Tue-red}{RGB}{50, 25, 180}
+% Define color_scheme (color of the TU/e logo). Can be changed to drastically change the look of the template
+\definecolor{color_scheme}{RGB}{8, 163, 227}
 
 % All of the following code can be removed to be left with (close to) default LaTeX behaviour. 
 
 % Sets up hyperlinks in the document to be colored
 \hypersetup{
     colorlinks=true,
-    linkcolor=Tue-red,
-    urlcolor=Tue-red,
-    citecolor = Tue-red
+    linkcolor=color_scheme,
+    urlcolor=color_scheme,
+    citecolor = color_scheme
     }
 \urlstyle{same} % Defines settings for link and reference formatting
 
 
 % Change bullet style for level 1, 2 and 3 respectively for itemize
-\renewcommand{\labelitemi}{\scriptsize\textcolor{Tue-red}{$\blacksquare$}}% level 1
-\renewcommand{\labelitemii}{\scriptsize\textcolor{Tue-red}{$\square$}}% level 2
-\renewcommand{\labelitemiii}{\textcolor{Tue-red}{$\circ$}}% level 3
+\renewcommand{\labelitemi}{\scriptsize\textcolor{color_scheme}{$\blacksquare$}}% level 1
+\renewcommand{\labelitemii}{\scriptsize\textcolor{color_scheme}{$\square$}}% level 2
+\renewcommand{\labelitemiii}{\textcolor{color_scheme}{$\circ$}}% level 3
 
-% \renewcommand{\labelitemi}{\small\textcolor{Tue-red}{\ding{70}}} % level 1
-% \renewcommand{\labelitemii}{\small\textcolor{Tue-red}{\ding{71}}}% level 2
-% \renewcommand{\labelitemiii}{\tiny\textcolor{Tue-red}{\ding{71}}}% level 3
+% \renewcommand{\labelitemi}{\small\textcolor{color_scheme}{\ding{70}}} % level 1
+% \renewcommand{\labelitemii}{\small\textcolor{color_scheme}{\ding{71}}}% level 2
+% \renewcommand{\labelitemiii}{\tiny\textcolor{color_scheme}{\ding{71}}}% level 3
 
 % Change bullet style for level 1, 2 and 3 respectively for enumerate
-\renewcommand{\labelenumi}{\textbf{\textcolor{Tue-red}{\arabic*.}}}% level 1
-\renewcommand{\labelenumii}{\textbf{\textcolor{Tue-red}{[\alph*]}}}% level 2
-\renewcommand{\labelenumiii}{\textbf{\textcolor{Tue-red}{\roman*.}}}% level 3
+\renewcommand{\labelenumi}{\textbf{\textcolor{color_scheme}{\arabic*.}}}% level 1
+\renewcommand{\labelenumii}{\textbf{\textcolor{color_scheme}{[\alph*]}}}% level 2
+\renewcommand{\labelenumiii}{\textbf{\textcolor{color_scheme}{\roman*.}}}% level 3
 
 % Have reference labels be linked to section (section 3 will have fig. 3.1 etc.)
 \counterwithin{equation}{section} % For equations
@@ -65,21 +70,22 @@ Formador: Nelson Alexandre Santos
 
 % Creates a beautiful header/footer
 \pagestyle{fancy}
-\lhead{\includegraphics[height = 8pt]{Figures/0. General/atec_2.png}}
-\rhead{\reporttitle}
+\setlength{\headheight}{17pt}
+\lhead{\raisebox{-0.1\height}{\includegraphics[height=12pt]{Figures/0. General/atec_2.png}}}
+\rhead{\raisebox{0.05\height}{\reporttitle}}
 \renewcommand{\footrulewidth}{0.4pt}
 \cfoot{Página \thepage}
 
 % Formats section, subsection and subsubsection titles respectively 
-\titleformat{\section}{\sffamily\color{Tue-red}\Large\bfseries}{\thesection\enskip\color{gray}\textbar\enskip}{0cm}{} % Formats section titles
+\titleformat{\section}{\sffamily\color{color_scheme}\LARGE\bfseries}{\thesection\enskip\color{gray}\textbar\enskip}{0cm}{} % Formats section titles
 
-\titleformat{\subsection}{\sffamily\color{Tue-red}\large\bfseries}{\thesubsection\enskip\color{gray}\textbar\enskip}{0cm}{} % Formats subsection titles
+\titleformat{\subsection}{\sffamily\color{color_scheme}\large\bfseries}{\thesubsection\enskip\color{gray}\textbar\enskip}{0cm}{} % Formats subsection titles
 
-\titleformat{\subsubsection}{\sffamily\color{Tue-red}\bfseries}{\thesubsubsection\enskip\color{gray}\textbar\enskip}{0cm}{} % Formats subsubsection titles
+\titleformat{\subsubsection}{\sffamily\color{color_scheme}\bfseries}{\thesubsubsection\enskip\color{gray}\textbar\enskip}{0cm}{} % Formats subsubsection titles
 
 % Formats captions
-\DeclareCaptionFont{Tue-red}{\color{Tue-red}}
-\captionsetup{labelfont={Tue-red,bf}}
+\DeclareCaptionFont{color_scheme}{\color{color_scheme}}
+\captionsetup{labelfont={color_scheme,bf}}
 
  % Changes font to mlmodern
 % \usepackage{mlmodern}
