--- a/main.tex
+++ b/main.tex
@@ -54,14 +54,14 @@
 
 
 % Creates references using the Biblatex 
-% \bibliographystyle{plain}
-% \bibliography{General/References.bib}
-% \newpage
+\bibliographystyle{plain}
+\bibliography{General/References.bib}
+\newpage
 
 \appendix % Any section after this command will have a letter as an index
 
 % Adds an appendix entry
-\input{Chapters/A. Appendix A}
-\newpage
+% \input{Chapters/A. Appendix A}
+% \newpage
 
 \end{document}
