--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@
 
 
 % Creates references using the Biblatex 
-\bibliographystyle{plain}
+\bibliographystyle{unsrt}
 \bibliography{General/References.bib}
 \newpage
 
