--- a/General/References.bib
+++ b/General/References.bib
@@ -1,68 +1,6 @@
 % list of references
-@misc{whatIsOpenSource,
-  author      = "Red Hat",
-  title       = "O que é open source?",
-  note        = "https://www.redhat.com/pt-br/topics/open-source/what-is-open-source",
-}
-
-@misc{advantagesOfOpenSource,
-  author       = "ekipa",
-  title       = "As vantagens do open source",
-  note        = "https://www.ekipa.pt/as-vantagens-do-open-source/"
-}
-
-@misc{advantagesOfProprietary,
-  author       = "Solutions Hub",
-  title       = "Proprietary Software Definitions",
-  note        = "https://solutionshub.epam.com/blog/post/proprietary-software-definition-examples"
-}
-
-@misc{kernel,
-  author       = "Significados",
-  title        = "O que é o Kernel de um sistema operacional",
-  note         = "https://www.significados.com.br/kernel/"
-}
-
-@misc{linuxHistory,
-  author       = "GeeksForGeeks",
-  title        = "Linux History",
-  note         = "https://www.geeksforgeeks.org/linux-history/"
-}
-
-@misc{gnuHistory,
-  author       = "Curious Minds",
-  title        = "The History of Free Software and Open Source",
-  note         = "https://www.cmpod.net/all-transcripts/history-open-source-free-software-text/"
-}
-
-@misc{diverseUsage,
-  author       = "Lenovo",
-  title        = "What is linux used for",
-  note         = "https://www.lenovo.com/za/en/faqs/operating-systems/what-is-linux-used-for"
-}
-
-@misc{openSourceLicense,
-  author       = "Open Source Initiative",
-  title        = "The Open Source Definition",
-  note         = "https://opensource.org/osd"
-}
-
-
-@misc{openSourceSecurity,
-author          = "snyk",
-title           = "Open source security explained",
-note            = "https://snyk.io/series/open-source-security/"
-}
-
-@misc{whyOpenSource,
-author          = "pimcore",
-title           = "Why open source?",
-note            = "https://pimcore.com/en/why-open-source"
-}
-
-@misc{stateOfEnterpriseOpenSource,
-  author        = "Red Hat",
-  title         = "The State of Enterprise Open Source",
-  note          = "https://www.redhat.com/en/enterprise-open-source-report/2022",
-  year          = "2022"
+@misc{example,
+  author      = "autor",
+  title       = "titulo",
+  note        = "https://www.example.com",
 }
