--- a/General/Settings.tex
+++ b/General/Settings.tex
@@ -1,101 +1,94 @@
-% Give your report a title
-\newcommand\reporttitle{Kernel, Licenciamento e Segurança em Ambientes \textit{Open Source} e Proprietários}
+% Titulo
+\newcommand\reporttitle{Exemplo de titulo de um trabalho}
 
-% Insert course code, name, quartile number and year (or any other subtitle)
+% Modulo
 \newcommand\reportsubtitle{
-5116 - Sistemas Operativos \textit{Open Source}
+9999 - Nome do módulo
 }
 
-% Add your group number (for DBL) or any other text.
-% \newcommand\groupnumber{
-% \textbf{Group xx}
-% }
-
-% Insert authors and student numbers here
-\newcommand\reportauthors{
-\vspace{-0.4cm}  
- \\
-Daniel Quaresma \\
-Lucas Silvestre \\
-João Correia \\
-Vladimiro Bonaparte \\
+% Grupo
+\newcommand{\autores}{%
+    \begin{tabular}{@{}l@{}}
+        \textbf{Autores:} \\[0.1em]
+        Autor 1 \\[0.1em]
+        Autor 2 \\[0.1em]
+        Autor 3 \\[0.1em]
+        Autor 4
+    \end{tabular}%
 }
 
-% Add the name of your tutor (for DBL) or any other text.
-\newcommand\grouptutor{
-\textbf{Formador:}\\
-\vspace{0.05cm}  
-Nelson Santos
+% Formador
+\newcommand{\formador}{%
+    \begin{tabular}{@{}l@{}}
+        \textbf{Formador:} \\[0.1em]
+        Formador 1 
+    \end{tabular}%
 }
 
-% Date and location (default: current date and Eindhoven)
+% Curso
+\newcommand{\cursoextenso}{Técnico/a Especialista em Tecnologias e Programação de Sistemas de Informação}
+\newcommand{\curso}{TPSI PL 1223}
+
+% Local e data
 \newcommand\placeanddate{
     \vspace{-0.5cm}
-    \today
+    Palmela, \today
 }
 
-% Define color_scheme (color of the TU/e logo). Can be changed to drastically change the look of the template
+% Color scheme
 \definecolor{color_scheme}{RGB}{8, 163, 227}
 
-% All of the following code can be removed to be left with (close to) default LaTeX behaviour. 
-
-% Sets up hyperlinks in the document to be colored
+% Hyperlink colors
 \hypersetup{
     colorlinks=true,
     linkcolor=color_scheme,
     urlcolor=color_scheme,
     citecolor = color_scheme
     }
-\urlstyle{same} % Defines settings for link and reference formatting
+\urlstyle{same} % setting for link and reference formatting
 
-
-% Change bullet style for level 1, 2 and 3 respectively for itemize
+% Change bullet style for itemize
 \renewcommand{\labelitemi}{\scriptsize\textcolor{color_scheme}{$\blacksquare$}}% level 1
 \renewcommand{\labelitemii}{\scriptsize\textcolor{color_scheme}{$\square$}}% level 2
 \renewcommand{\labelitemiii}{\textcolor{color_scheme}{$\circ$}}% level 3
 
-% \renewcommand{\labelitemi}{\small\textcolor{color_scheme}{\ding{70}}} % level 1
-% \renewcommand{\labelitemii}{\small\textcolor{color_scheme}{\ding{71}}}% level 2
-% \renewcommand{\labelitemiii}{\tiny\textcolor{color_scheme}{\ding{71}}}% level 3
-
-% Change bullet style for level 1, 2 and 3 respectively for enumerate
+% Change bullet style for enumerate
 \renewcommand{\labelenumi}{\textbf{\textcolor{color_scheme}{\arabic*.}}}% level 1
 \renewcommand{\labelenumii}{\textbf{\textcolor{color_scheme}{[\alph*]}}}% level 2
 \renewcommand{\labelenumiii}{\textbf{\textcolor{color_scheme}{\roman*.}}}% level 3
 
-% Have reference labels be linked to section (section 3 will have fig. 3.1 etc.)
+% reference labels linked to section
 \counterwithin{equation}{section} % For equations
 \counterwithin{figure}{section} % For figures
 \counterwithin{table}{section} % For tables
 
-% Creates a beautiful header/footer
+% Create header/footer
 \pagestyle{fancy}
 \setlength{\headheight}{17pt}
 \lhead{\raisebox{-0.1\height}{\includegraphics[height=12pt]{Figures/0. General/atec_2.png}}}
-\rhead{\raisebox{0.05\height}{\reporttitle}}
+\rhead{\raisebox{0.05\height}{ \reporttitle, \reportsubtitle, Grupo 1}}
 \renewcommand{\footrulewidth}{0.4pt}
 \cfoot{Página \thepage}
 
-% Formats section, subsection and subsubsection titles respectively 
-\titleformat{\section}{\sffamily\color{color_scheme}\LARGE\bfseries}{\thesection\enskip\color{gray}\textbar\enskip}{0cm}{} % Formats section titles
+% Formats section, subsection and subsubsection titles 
+\titleformat{\section}{\sffamily\color{color_scheme}\LARGE\bfseries}{\thesection\enskip\color{gray}\textbar\enskip}{0cm}{}
+\titleformat{\subsection}{\sffamily\color{color_scheme}\large\bfseries}{\thesubsection\enskip\color{gray}\textbar\enskip}{0cm}{}
+\titleformat{\subsubsection}{\sffamily\color{color_scheme}\bfseries}{\thesubsubsection\enskip\color{gray}\textbar\enskip}{0cm}{}
 
-\titleformat{\subsection}{\sffamily\color{color_scheme}\large\bfseries}{\thesubsection\enskip\color{gray}\textbar\enskip}{0cm}{} % Formats subsection titles
-
-\titleformat{\subsubsection}{\sffamily\color{color_scheme}\bfseries}{\thesubsubsection\enskip\color{gray}\textbar\enskip}{0cm}{} % Formats subsubsection titles
-
-% Formats captions
+% Format captions
 \DeclareCaptionFont{color_scheme}{\color{color_scheme}}
 \captionsetup{labelfont={color_scheme,bf}}
 
- % Changes font to mlmodern
-% \usepackage{mlmodern}
-
-% Changes font to arial
+% Change font to arial
 \usepackage{helvet}
 \renewcommand{\familydefault}{\sfdefault}
 
 % Removes indent when starting a new paragraph
 \setlength\parindent{0pt}
 
-% Limits the ToC to sections and subsections (no subsubsec.)
+% Limits the ToC to sections and subsections only, no subsubsections
 \setcounter{tocdepth}{2}
+
+\renewcommand{\topfraction}{0.85}
+\renewcommand{\textfraction}{0.1}
+\renewcommand{\floatpagefraction}{0.75}
