--- a/General/Preamble.tex
+++ b/General/Preamble.tex
@@ -1,16 +1,6 @@
-% Useful packages, sorted so packages of similar functionality are grouped together. Not all are essential to make the document work, however an effort was made to make this list as minimalistic as possible. Feel free to add your own!
-
-% Essential for making this template work are graphicx, float, tabularx, tabu, tocbibind, titlesec, fancyhdr, xcolor and tikz. 
-
-% Not essential, but you will have to debug the document a little bit when removing them are amsmath, amsthm, amssymb, amsfonts, caption, subcaption, appendix, enumitem, hyperref and cleveref.
-
-% inputenc, lipsum, booktabs, geometry and microtype are not required, but nice to have.
-
 \usepackage[utf8]{inputenc} % Allows the use of some special characters
 \usepackage{amsmath, amsthm, amssymb, amsfonts} % Nicer mathematical typesetting
 \usepackage[portuguese]{babel} % Portuguese language settings
-% \usepackage[latin]{babel}
-% \usepackage{lipsum} % Creates dummy text lorem ipsum to showcase typsetting 
 \usepackage{setspace}
 \usepackage{graphicx} % Allows the use of \begin{figure} and \includegraphics
 \usepackage{float} % Useful for specifying the location of a figure ([H] for ex.)
@@ -20,7 +10,7 @@
 \usepackage{tabu} % Adds additional customization for tables
 \usepackage{booktabs} % For generally nicer looking tables
 \usepackage[nottoc,numbib]{tocbibind} % Automatically adds bibliography to ToC
-\usepackage[margin = 2.54cm]{geometry} % Allows for custom (wider) margins
+\usepackage[left=3cm, right=2cm, top=2cm, bottom=2cm]{geometry}
 \usepackage{microtype} % Slightly loosens margin restrictions for nicer spacing  
 \usepackage{titlesec} % Used to create custom section and subsection titles
 \usepackage{titletoc} % Used to create a custom ToC
@@ -28,11 +18,12 @@
 \usepackage{fancyhdr} % Adds customization for headers and footers
 \usepackage[shortlabels]{enumitem} % Adds additional customization for itemize. 
 \usepackage{hyperref} % Allows links and makes references and the ToC clickable
-\usepackage[noabbrev, capitalise]{cleveref} % Easier referencing using \cref{<label>} instead of \ref{}
-
+\usepackage[noabbrev, capitalise]{cleveref} % Easier referencing using \cref{<label>} instead of \ref
 \usepackage{xcolor} % Predefines additional colors and allows user defined colors
-
 \usepackage{tikz} % Useful for drawing images, used for creating the frontpage
+\usepackage{changepage} % Allows the use of \begin{adjustwidth} and \end{adjustwidth}
+\usepackage{listings} % Allows the use of \begin{lstlisting} and \lstinputlisting
+\usepackage{placeins} % Allows the use of \FloatBarrier
 \usetikzlibrary{positioning} % Additional library for relative positioning 
 \usetikzlibrary{calc} % Additional library for calculating within tikz
 
@@ -45,5 +36,60 @@
 }
 \makeatother
 
+% Define a custom color
+\definecolor{sqlkeywords}{HTML}{08A3E3}
 
+% Defines the language for SQL
+\lstdefinelanguage{SQL}{
+    keywords={
+        SELECT, FROM, WHERE, AND, OR, INSERT, INTO, UPDATE, DELETE, CREATE, TABLE, ALTER, ADD, DROP, COLUMN, INDEX, PRIMARY, KEY, FOREIGN, NOT, NULL, UNIQUE, CHECK, DEFAULT, AS, DISTINCT, JOIN, INNER, LEFT, RIGHT, FULL, ON, GROUP, BY, HAVING, ORDER, LIMIT, OFFSET, UNION, ALL
+    },
+    keywordstyle=\color{sqlkeywords}\bfseries,
+    identifierstyle=\color{black},
+    commentstyle=\color{gray}\itshape,
+    stringstyle=\color{orange},
+    morecomment=[l][\color{magenta}]{--},
+    morecomment=[s][\color{magenta}]{/*}{*/},
+    morestring=[b]"
+}
 
+% Set the default style for listings
+\lstset{
+    language=SQL,
+    basicstyle=\ttfamily\large,
+    numbers=left,
+    numberstyle=\tiny\color{gray},
+    stepnumber=1,
+    numbersep=10pt,
+    backgroundcolor=\color{white},
+    showspaces=false,
+    showstringspaces=false,
+    tabsize=1,
+    captionpos=b,
+    breaklines=true,
+    breakatwhitespace=false,
+    frame=single,
+    rulecolor=\color{black},
+    xleftmargin=0pt, % Remove left margin
+    framexleftmargin=0pt, % Remove frame left margin
+    columns=fullflexible, % Minimize spacing
+    inputencoding=utf8,
+    extendedchars=true,
+    literate=%
+    {é}{{\'e}}1
+    {á}{{\'a}}1
+    {í}{{\'i}}1
+    {ó}{{\'o}}1
+    {ú}{{\'u}}1
+    {ã}{{\~a}}1
+    {õ}{{\~o}}1
+    {ç}{{\c{c}}}1
+    {É}{{\'E}}1
+    {Á}{{\'A}}1
+    {Í}{{\'I}}1
+    {Ó}{{\'O}}1
+    {Ú}{{\'U}}1
+    {Ã}{{\~A}}1
+    {Õ}{{\~O}}1
+    {Ç}{{\c{C}}}1
+}
