--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, table, 10pt]{article}
+\documentclass[a4paper, table, 11pt]{article}
 \input{General/Preamble} % Loads in the preamble 
 \input{General/Settings} % Loads in user defined settings
 \begin{document}
@@ -29,19 +29,7 @@
 \newpage
 
 % Capitulo 5
-\input{Chapters/5. Capitulo}
-\newpage
-
-% Capitulo 6
-\input{Chapters/6. Capitulo}
-\newpage
-
-% Capitulo 7
-\input{Chapters/7. Capitulo}
-\newpage
-
-% Capitulo 8
-\input{Chapters/8. Conclusao}
+\input{Chapters/5. Conclusao}
 \newpage
 
 % contains inspiration for formatting tables, images, text citations etc.
@@ -54,11 +42,11 @@
 
 
 % Creates references using the Biblatex 
-\bibliographystyle{unsrt}
-\bibliography{General/References.bib}
-\newpage
+% \bibliographystyle{unsrt}
+% \bibliography{General/References.bib}
+% \newpage
 
-\appendix % Any section after this command will have a letter as an index
+% \appendix % Any section after this command will have a letter as an index
 
 % Adds an appendix entry
 % \input{Chapters/A. Appendix A}
